<?php
namespace DesignPatterns\Creational\AbstractFactory;

class AbstractProductA
{

}