<?php
namespace DesignPatterns\Creational\AbstractFactory;

class AbstractProductB
{

}