<?php
namespace DesignPatterns\Creational\AbstractFactory;

class ProductA1 extends AbstractProductA
{

}