<?php
namespace DesignPatterns\Creational\AbstractFactory;

class ProductA2 extends AbstractProductA
{

}