<?php
namespace DesignPatterns\Creational\AbstractFactory;

class ProductB1 extends AbstractProductB
{

}