<?php
namespace DesignPatterns\Creational\AbstractFactory;

class ProductB2 extends AbstractProductB
{

}