@startuml

abstract class AbstractProductA
abstract class AbstractProductB
abstract AbstractFactory

class ProductA1 {

}

class ProductB1 {

}

class ProductA2 {

}

class ProductB2 {

}

abstract class AbstractFactory{
    createProduct()
}

class Factory1 {
    createProduct()
}


class Factory2 {
    createProduct()
}

AbstractFactory <|-left- Factory1
AbstractFactory <|-right- Factory2

AbstractProductA <|-- ProductA1
AbstractProductA <|-- ProductA2
AbstractProductB <|-- ProductB1
AbstractProductB <|-- ProductB2

ProductA1 <.. Factory1
ProductB1 <.. Factory1
ProductA2 <.. Factory2
ProductB2 <.. Factory2

@enduml